refactor(language): name disambiguation
* Use fully qualified names starting with :: (as in C++) to unambiguously refer
  to an element.
* Name shadowing within modules.